# FlowSentry-Wake

./: .activate_destruct  .activate_prefix  .clang-format  .cmake-format.py  .gitignore  AGENTS.md  LICENSE  LICENSE.txt  LICENSE_SCOPE.md  Makefile  README.md  RELEASE_NOTES.md  deploy.py  inference.py  inference_opticalflow.py  install.sh  installer_support.py  launch-docker.sh  prepare_calib_data.py  pyproject.toml  requirements.runtime.txt  requirements.unittests.txt  tox.ini  verify_onnx.py
axelera_llm/: LICENSE.txt  pyproject.toml
axelera_llm/axelera/llm/: axllm.py  cli_ui.py  config.py  constants.py  conversation.py  device_manager.py  embedding_processor.py  environ.py  extract_embeddings.py  generation_stats.py  inf_tracers.py  logging_utils.py  model_instance.py  network.py  pipeline.py  ui.py  utils.py  yaml_parser.py
axelera_llm/axelera/llm/assets/: styles.css
examples/axinferencenet/: CMakeLists.txt  axinferencenet_cascaded.cpp  axinferencenet_example.cpp  axinferencenet_tensor.cpp  axinferencenet_tracker.cpp
examples/axruntime/: CMakeLists.txt  axruntime_example.cpp  axruntime_example.py
operators/: CMakeLists.txt  CustomerUtils.cmake  Makefile  axstreamer.pc.configure
operators/PillowResize/: CMakeLists.txt
operators/PillowResize/include/PillowResize/: PillowResize.hpp
operators/PillowResize/src/PillowResize/: CMakeLists.txt  ImagingSIMD.h  PillowResize.cc  ResampleSIMDHorizontalConv.cc  ResampleSIMDVerticalConv.cc  normalize_coeffs.cc
operators/axstreamer/: CMakeLists.txt
operators/axstreamer/include/: AxColor.hpp  AxDataInterface.h  AxFFMpegVideoDecoder.hpp  AxFilterDetections.hpp  AxInference.hpp  AxInferenceNet.hpp  AxLog.hpp  AxMeta.hpp  AxMetaBBox.hpp  AxMetaClassification.hpp  AxMetaImage.hpp  AxMetaKpts.hpp  AxMetaKptsDetection.hpp  AxMetaLandmarks.hpp  AxMetaLicensePlate.hpp  AxMetaObjectDetection.hpp  AxMetaPoseSegmentsDetection.hpp  AxMetaRawTensor.hpp  AxMetaSegments.hpp  AxMetaSegmentsDetection.hpp  AxMetaSemanticSegmentation.hpp  AxMetaStreamId.hpp  AxMetaTracker.hpp  AxNms.hpp  AxOpUtils.hpp  AxOpenCVRender.hpp  AxOpenCVVideoDecoder.hpp  AxOpenCl.hpp  AxOpenClExtensions.hpp  AxPlugin.hpp  AxStreamerUtils.hpp  AxUtils.hpp  AxVideoDecode.hpp
operators/axstreamer/src/: AxFFMpegVideoDecoder.cpp  AxFilterDetections.cpp  AxInference.cpp  AxInferenceAxRuntime.cpp  AxInferenceNet.cpp  AxLog.cpp  AxNms.cpp  AxOpUtils.cpp  AxOpenCLAllocator.cpp  AxOpenCVRender.cpp  AxOpenCVVideoDecoder.cpp  AxOpenCl.cpp  AxOpenClExtensions.cpp  AxStreamerUtils.cpp
operators/gstaxstreamer/: CMakeLists.txt
operators/gstaxstreamer/include/: GstAxBufferPool.hpp  GstAxDataUtils.hpp  GstAxDecode.hpp  GstAxDistributor.hpp  GstAxFunnel.hpp  GstAxInPlace.hpp  GstAxInference.hpp  GstAxInferenceNet.hpp  GstAxMeta.hpp  GstAxStreamerUtils.hpp  GstAxTransform.hpp
operators/gstaxstreamer/src/: GstAlignedAllocator.cpp  GstAxBufferPool.cpp  GstAxDataUtils.cpp  GstAxDecode.cpp  GstAxDistributor.cpp  GstAxDmaBufAllocator.cpp  GstAxFunnel.cpp  GstAxInPlace.cpp  GstAxInference.cpp  GstAxInferenceNet.cpp  GstAxMeta.cpp  GstAxNoDmaBufAllocator.cpp  GstAxOpenCLAllocator.cpp  GstAxPlugins.cpp  GstAxStreamerUtils.cpp  GstAxTransform.cpp
operators/include/: GstAxMetaToHailo.hpp
operators/src/: AxDecodeCTC.cpp  AxDecodeClassification.cpp  AxDecodeEmbeddings.cc  AxDecodeFaceBoxes.cpp  AxDecodeFaceRec.cpp  AxDecodeFacenet.cc  AxDecodeImage.cpp  AxDecodeLandmarks.cpp  AxDecodeMultihead.cc  AxDecodeRetinaFace.cpp  AxDecodeRtmDet.cpp  AxDecodeSemanticSeg.cpp  AxDecodeSsd2.cpp  AxDecodeToRawTensor.cpp  AxDecodeYolo.cpp  AxDecodeYolo10Simple.cpp  AxDecodeYolo5.cpp  AxDecodeYolo8.cpp  AxDecodeYolo8Seg.cpp  AxDecodeYoloOBB.cpp  AxDecodeYoloX.cpp  AxInPlaceAddStreamId.cpp  AxInPlaceAddTiles.cpp  AxInPlaceDraw.cpp  AxInPlaceFilterDetections.cpp  AxInPlaceHideMeta.cpp  AxInPlaceNms.cpp  AxInPlaceNormalize.cpp  AxInPlaceTracker.cpp  AxOnnxRuntimeHelper.cpp  AxOnnxRuntimeHelper.hpp  AxTrackerAttributeBestScore.cpp  AxTrackerAttributeMostFrequent.cpp  AxTrackerFilterNumSubtaskRuns.cpp  AxTransformBarrelCorrectCl.cpp  AxTransformCentreCropExtra.cpp  AxTransformColorConvert.cpp  AxTransformColorConvertCl.cpp  AxTransformContrastNormalize.cpp  AxTransformCropResize.cpp  (+16 more)
operators/tests/ax/: unittest_ax.cc  unittest_ax_common.h  unittest_ax_filterdetections.cc  unittest_ax_meta.cc  unittest_ax_nms.cc  unittest_ax_obj.cc  unittest_ax_yolopreproc.cc  unittest_axinference.cc  unittest_axinferencenet.cc  unittest_decode_classification.cc  unittest_decode_ctc.cc  unittest_decode_facenet.cc  unittest_decode_image.cc  unittest_decode_rtmdet.cc  unittest_decode_semantic_seg.cc  unittest_decode_ssd2.cc  unittest_decode_to_raw_tensor.cc  unittest_decode_yolo.cc  unittest_decode_yolo10simple.cc  unittest_decode_yolov5.cc  unittest_decode_yolov8.cc  unittest_decode_yolov8seg.cc  unittest_decode_yolox.cc  unittest_inplace_addtiles.cc  unittest_inplace_normalize.cc  unittest_opencl.cc  unittest_transform_barrelcorrect_cl.cc  unittest_transform_centrecropextra.cc  unittest_transform_colorconvert.cc  unittest_transform_colorconvert_cl.cc  unittest_transform_dequantize.cc  unittest_transform_facealign.cc  unittest_transform_normalize_cl.cc  unittest_transform_padding.cc  unittest_transform_paddingdequantize.cc  unittest_transform_perspective_cl.cc  unittest_transform_polar_cl.cc  unittest_transform_postamble.cc  unittest_transform_resize.cc  unittest_transform_resize_cl.cc  (+3 more)
trackers/: CMakeLists.txt  Makefile
trackers/algorithms/bytetrack/: CMakeLists.txt
trackers/algorithms/bytetrack/include/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
trackers/algorithms/bytetrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
trackers/algorithms/oc_sort/: CMakeLists.txt
trackers/algorithms/oc_sort/include/: Association.hpp  (+5 more)
trackers/axtracker/: CMakeLists.txt
trackers/axtracker/include/: trackers.hpp
trackers/axtracker/src/: lapjv.cpp  trackers.cpp
trackers/include/: MultiObjTracker.hpp  TrackerFactory.h  cmc.hpp
trackers/src/: TrackerFactory.cpp  cmc.cpp  track.cpp
(+659 files in other folders)
