[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "axelera-llm"
dynamic = ["version"]
description = "Axelera LLM runner with packaged model cards"
authors = [{ name = "Axelera AI", email = "axelera@axelera.ai" }]
license-files = [ "LICENSE.txt" ]
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.66.0",
  "psutil>=5.9.5",
  "requests>=2.31.0",
  "strictyaml>=1.7.3",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "typing_extensions>=4.9.0",
  "Pillow>=10.2.0",
  "networkx>=3.2.1",
  "transformers>=4.40.0",
  "jinja2>=3.1.3",
  "gradio>=4.36.0",
  "opencv-python>=4.8.1.78",
  "torch>=2.2.0",
  "huggingface_hub[hf_xet]>=0.23.0",
  "safetensors>=0.4.2"
]

[project.scripts]
axllm = "axelera.llm.axllm:entrypoint_main"
axextractembeddings = "axelera.llm.extract_embeddings:entrypoint_main"

[tool.setuptools]
include-package-data = true
py-modules = []
packages = [
  "axelera.llm",
  "axelera.llm.assets",
  "axelera.llm.assets.file",
  "axelera.llm.ax_models",
  "axelera.llm.ax_models.llm",
  "axelera.llm.ax_models.zoo",
  "axelera.llm.ax_models.zoo.llm",
]

[tool.setuptools.package-data]
"axelera.llm.ax_models.llm" = ["*.yaml", "*.yml"]
"axelera.llm.ax_models.zoo.llm" = ["*.yaml", "*.yml"]
"axelera.llm.assets" = ["*.css"]
"axelera.llm.assets.file" = ["*.*"]

[tool.black]
skip-string-normalization = true
line-length = 99
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
